--- a/public/dist.css
+++ b/public/dist.css
@@ -522,6 +522,11 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
