--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -1,7 +1,3 @@
-.form-field {
-    width: 100%;
-}
-
 .form-field input,
 .form-field textarea {
     width: 100%;
@@ -17,8 +13,14 @@
     font-size: 24px;
 }
 
-.form-field {
-    margin: 5px 0;
+.form-field:not(.questions *) {
+    margin-bottom: 10px;
+}
+
+/* Adds extra margin for buttons to account for form field labels */
+form .button,
+form p {
+    margin-top: 26px;
 }
 
 /* If the input is invalid */
@@ -55,6 +57,7 @@
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
+    margin-top: 10px;
 }
 
 .tag-select {
@@ -116,6 +119,11 @@
     color: var(--light-text)
 }
 
+dialog[open] {
+    margin: auto;
+    padding: 10px;
+}
+
 fieldset {
     border: none;
     padding: 0;
@@ -153,6 +161,7 @@ textarea {
 .question-pair {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .question-pair .question-question {
@@ -200,7 +209,8 @@ textarea {
     background-color: var(--danger);
     color: var(--light-text);
     border: none;
-    margin: 5px 0;
+    margin:0;
+    margin-bottom: 10px;
     border-radius: 0 5px 5px 0;
 }
 
