--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -2,6 +2,7 @@
 body {
   display: grid;
   grid-template-rows: 1fr auto;
+  grid-template-areas: "main" "navbar";
 }
 
 .navbar {
@@ -56,7 +57,7 @@ body {
   body {
     grid-template-rows: 1fr;
     grid-template-columns: auto 1fr;
-    grid-template-areas: "navbar page";
+    grid-template-areas: "navbar main";
   }
 
   .navbar {
