--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -8,6 +8,7 @@
     font-size: 24px;
     background-color: transparent;
     color: var(--primary-text);
+    
 }
 
 input:focus, textarea:focus {
@@ -24,8 +25,12 @@ input:focus, textarea:focus {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 10px;
-    height: 50px;
+    height: 60px;
     color: var(--primary-text);
+    margin-left: var(--page-horizontal-spacing);
+    margin-right: var(--page-horizontal-spacing);
+
+    margin-bottom: 10px;
 }
 
 input[type="search"]::-webkit-search-decoration,
