--- a/public/styles/play.css
+++ b/public/styles/play.css
@@ -46,12 +46,17 @@
 }
 
 #round>section {
-    width: 100%;
     max-height: 100%;
     height: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+}
+
+#results h1 {
+    margin-left: var(--page-horizontal-spacing);
+    margin-right: var(--page-horizontal-spacing);
+
 }
 
 
@@ -64,11 +69,6 @@
     height: 100%;
     margin: 0;
     padding: 0;
-}
-
-#round>section:not([data-complete]):first-child,
-#round>section[data-complete]+section:not([data-complete]) {
-    display: grid !important;
 }
 
 .question-display {
@@ -225,15 +225,11 @@ button.answer-card:hover {
 }
 
 .retry-page {
-    grid-template-rows: auto auto;
+    grid-template-rows: 1fr auto;
     justify-content: space-between;
     grid-template-columns: 1fr;
-}
-
-.retry-page main {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
+    margin-left: var(--page-horizontal-spacing);
+    margin-right: var(--page-horizontal-spacing);
 }
 
 #results-chart {
@@ -314,7 +310,10 @@ th {
 }
 
 .play-question main,
-.play-question header {
+.play-question header,
+.retry-page main
+.retry-page header {
     margin-left: var(--page-horizontal-spacing);
     margin-right: var(--page-horizontal-spacing);
 }
+
