--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -483,6 +483,7 @@ section {
 
 .tab-bar .selected-tab-button:hover {
     background-color: var(--accent-hover);
+    color: var(--light-text-hover)
 }
 
 header {
